--- a/templates/pet shop items.html
+++ b/templates/pet shop items.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Huellitas</title>
-    <link rel="shortcut icon" href="../Static/img/logo1.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="../static/img/logo1.jpeg" type="image/x-icon">
     <link rel="stylesheet" href="../static/css/Style1.css">
 </head>
 
