--- a/templates/pet shop items.html
+++ b/templates/pet shop items.html
@@ -15,7 +15,7 @@
             <nav>
                 <div class="logo">
                         <a href="../">
-                        <img src="../Static/img/logo2.jpg"  width="75" height="75" alt="Logo">
+                        <img src="../Static/img/logo.png"  width="75" height="75" alt="Logo">
                         </a>
                   
                     </div>
