--- a/templates/quienesSomos.html
+++ b/templates/quienesSomos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>¿Quiénes somos? - Huellitas</title>
-    <link rel="shortcut icon" href="../Static/img/logo1.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="../Static/img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../Static/CSS/Style3.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
         <nav>
         <div class="logo">
                 <a href="../">
-                <img src="../Static/img/logo2.jpg"  width="75" height="75" alt="Logo">
+                <img src="../Static/img/logo.png"  width="75" height="75" alt="Logo">
                 </a>
           
             </div>
