--- a/templates/quienesSomos.html
+++ b/templates/quienesSomos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>¿Quiénes somos? - Huellitas</title>
-    <link rel="shortcut icon" href="../Static/img/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../Static/img/logo1.jpg" type="image/x-icon">
     <link rel="stylesheet" href="../Static/CSS/Style3.css">
 </head>
 <body>
