--- a/templates/quienesSomos.html
+++ b/templates/quienesSomos.html
@@ -12,7 +12,7 @@
         <nav>
         <div class="logo">
                 <a href="../">
-                <img src="./Static/img/logo.png"  width="75" height="75" alt="Logo">
+                <img src="../Static/img/logo.png"  width="75" height="75" alt="Logo">
                 </a>
           
             </div>
