Update pet shop items.html

--- a/templates/pet shop items.html
+++ b/templates/pet shop items.html
@@ -34,7 +34,7 @@
             <h2>Pet Shop - ¡Accesorios para los engreidos de la casa!</h2>
             
                 <ul>
-                  <li><a href="/tp-pet shop/index.html">Inicio</a></li>
+                  <li><a href="../">Inicio</a></li>
                  <li><a href="../templates/quienesSomos.html">Contacto</a></li>
                  <li><a href="../templates/register.html">¡Agregar al Carrito!</a></li>
              </ul>
