--- a/templates/pet shop items.html
+++ b/templates/pet shop items.html
@@ -47,7 +47,7 @@
             <h3>Nuestros productos</h3>
             
             <div class="accesorio-grid">
-                <img src="../Static/img/alimentoPET.jpeg" alt="" class="accesorio-item-img">
+                <img src="./Static/img/alimentoPET.jpeg" alt="" class="accesorio-item-img">
                 <h4>ALIMENTO
                 <p>¡Para los engreídos de casa!</p>
                     <span class="precio">$9.999.99</span> 
